--- a/css/responsive_movil.css
+++ b/css/responsive_movil.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 300px) and (max-width: 600px){
+@media screen and (min-width: 300px) and (max-width: 767px){
 	
 	#titulo{
 		height: 200px;
@@ -22,11 +22,11 @@
 		width: 1120px;
 	}
 
-	a.links{
+	.links{
 		font-size: 80px;
 	}
 
-	li.linkstop{
+	.linkstop{
 		display: block;
 		text-align: center;
 		margin-top: 30px;
@@ -58,11 +58,11 @@
 		margin-left: 55px;
 	}
 	
-	li.listasidebartop{
+	.listasidebartop{
 		font-size: 40px;
 	}
 
-	li.listasidebar2{
+	.listasidebar2{
 		font-size: 40px;
 	}
 	
